--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -9,7 +9,7 @@ components respectively. I define the vertex and fragment shader code in this fi
 -->
 <html>
   <head>
-    <title>COMP 153 - Lab 3</title>
+    <title>COMP 153 - Assignment 2</title>
 
     <style type="text/css">
       canvas {
