Random coin generation, reset feature

--- a/Assignment2/index.html
+++ b/Assignment2/index.html
@@ -1,6 +1,6 @@
 ﻿<!--
 FileName:       Lab3.html
-Programmer:     Dan Cliburn
+Programmer:     Dan Cliburn, Dean S., Chris C., Chris S.
 Date:           8/11/2020
 Purpose:		This file defines the html code necessary to run our WebGL 2 program.
 I've made an attempt to separate the parts of the program using the Model-View-Controller 
