Adding wall textures

--- a/Assignment7/index.html
+++ b/Assignment7/index.html
@@ -11,10 +11,10 @@ We are also loading additional JavaScript files to break the code up into more, 
 -->
 
 <!-- Load image files -->
-<img src="glacier.bmp" id="glacier" hidden />
-<img src="yosemite.bmp" id="yosemite" hidden />
+<img src="floor3.jpg" id="glacier" hidden />
+<img src="wall.jpg" id="yosemite" hidden />
 <img src="tiger.bmp" id="tiger" hidden />
-<img src="tree.bmp" id="tree" hidden />
+<img src="gun.png" id="gun" hidden />
 <img src="crosshair2.png" id="star" hidden />
 <!-- The "hidden" tag keeps the html page from displaying the images on the page itself. We
      want to access the images in our JavaScript code and not have them displayed on the page.
