Added Textures, fixed some stuff, add cube bullet

--- a/Assignment7/index.html
+++ b/Assignment7/index.html
@@ -11,11 +11,13 @@ We are also loading additional JavaScript files to break the code up into more, 
 -->
 
 <!-- Load image files -->
-<img src="floor3.jpg" id="glacier" hidden />
+<img src="floor.jpg" id="glacier" hidden />
 <img src="wall.jpg" id="yosemite" hidden />
 <img src="tiger.bmp" id="tiger" hidden />
 <img src="gun.png" id="gun" hidden />
 <img src="crosshair2.png" id="star" hidden />
+<img src="bullet.png" id="bullet" hidden />
+<img src="target.png" id="target" hidden />
 <!-- The "hidden" tag keeps the html page from displaying the images on the page itself. We
      want to access the images in our JavaScript code and not have them displayed on the page.
      Also note that for this to work you must be running a local web server.
@@ -42,6 +44,7 @@ We are also loading additional JavaScript files to break the code up into more, 
     <script src="texsquare.js" defer></script>
     <script src="pyramid.js" defer></script>
     <script src="gun.js" defer></script>
+    <script src="bullet.js" defer></script>
 
     <script src="gl-matrix.js" defer></script>
     <!-- Load the gl-matrix.js file to do matrix operations. See: glmatrix.net -->
