--- a/Assignment7/index.html
+++ b/Assignment7/index.html
@@ -1,6 +1,7 @@
 ﻿<!--
 FileName:       Lab10.html
 Programmer:     Dan Cliburn
+Students: Chris Ciobanu, Dean Shin, Chris Scrosati
 Date:           9/22/2020
 Purpose:		This file defines the html code necessary to run our WebGL 2 program.
 I've made an attempt to separate the parts of the program using the Model-View-Controller 
@@ -8,6 +9,10 @@ design pattern. The model.js, view.js, and controller.js files define the code f
 components respectively. I define the vertex and fragment shader code in this file. We also
 load gl-matrix.js to perform matrix operations. New for Lab 10, we define multiple shader pairs.
 We are also loading additional JavaScript files to break the code up into more, but shorter, code files.
+
+Extra Credit: We created a first person shooting gallery for the extra credit. This game involves shooting 20 targets with a gun 
+to win. We implmented walking with the wasd keys and view movement with the mouse. Shooting capabilitys from the gun. Win/loss states with the targets
+as well as other features such as aiming down sights on the gun, full screen mode, pointer locking, gimbal locking etc. 
 -->
 
 <!-- Load image files -->
