--- a/Assignment7/index.html
+++ b/Assignment7/index.html
@@ -11,8 +11,8 @@ We are also loading additional JavaScript files to break the code up into more, 
 -->
 
 <!-- Load image files -->
-<img src="floor.jpg" id="glacier" hidden />
-<img src="wall.jpg" id="yosemite" hidden />
+<img src="floor.jpg" id="floor" hidden />
+<img src="wall.jpg" id="wall" hidden />
 <img src="tiger.bmp" id="tiger" hidden />
 <img src="gun.png" id="gun" hidden />
 <img src="crosshair2.png" id="star" hidden />
