Fix full screen ish

--- a/Assignment7/index.html
+++ b/Assignment7/index.html
@@ -396,7 +396,7 @@ as well as other features such as aiming down sights on the gun, full screen mod
 </head>
 
 <body>
-    <div>
+    <div id="screen">
         <canvas id="webgl-canvas" width="1920" height="1080">
 
             Your browser does not support the HTML5 canvas element.
