--- a/Assignment7/index.html
+++ b/Assignment7/index.html
@@ -4,10 +4,10 @@ Programmers:    Dan Cliburn, Chris Ciobanu, Dean Shin, Chris Scrosati
 Date:           11/17/2022
 Purpose:		This file defines the html code necessary to run our WebGL 2 program.
 
-We created a first person shooting gallery for the extra credit. This game involves shooting 25 targets with a gun to win. 
-We implemented walking with the WASD and arrow keys and view movement with the mouse. 
-Shooting capability is from the gun. Win/loss states are determined from how many targets have been hit.
-Other features such as aiming down sights on the gun, full screen mode, pointer locking, gimbal locking etc. are supported.
+We created a first person shooting gallery for the extra credit.
+The user can walk around the scene with the WASD or arrow keys, and use their mouse to look around the environment.
+This game has 30 targets that can be shot down by the player--in order to win, the player must shoot down at least 25 of them.
+Additionally, other features such as aiming down sights on the gun, full screen mode, pointer locking, gimbal locking etc. are supported.
 -->
 
 <!-- Load image files -->
